--- a/src/app/Components/home/home.component.scss
+++ b/src/app/Components/home/home.component.scss
@@ -18,6 +18,11 @@
 
 .dashboard-card-content {
   text-align: center;
+  
+}
+.card-content{
+        width: fit-content;
+        height: 300px;
 }
 
 @keyframes bounce-in-top {
