--- a/src/app/Modules/User/Components/details/details.component.html
+++ b/src/app/Modules/User/Components/details/details.component.html
@@ -1,15 +1,15 @@
 <mat-card class="slide-in-bck-center">
     <mat-card-header>
-        <img mat-card-avatar [src]="userDetailed.photo" (click)="openPhotoDialog()">
-        <mat-card-title> {{userDetailed.lastName}}</mat-card-title>
-        <mat-card-subtitle> {{userDetailed.firstName}}</mat-card-subtitle>
+        <img mat-card-avatar [src]="userDetailed.photo" (click)="openPhotoDialog()" style="width: 60px; height: 60px;">
+        <mat-card-title style="margin:10px"> {{userDetailed.lastName}}</mat-card-title>
+        <mat-card-subtitle style=" margin-bottom: 10px; margin-left: 10px;"> {{userDetailed.firstName}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content>
         <!-- <p>Date de naissance: {{ userDetailed.birthdate | birthdate }}.</p> -->
         <mat-list>
             <mat-list-item>
-                Adresse: {{userDetailed.adStreet}} n°{{userDetailed.adNumber}} 
+                Adresse: {{userDetailed.adStreet}} n°{{userDetailed.adNumber}}
                 <label *ngIf="userDetailed.adBox != null"> boite {{userDetailed.adBox}}</label>
                 , {{userDetailed.adPostalCode}} {{userDetailed.adCity}}
             </mat-list-item>
@@ -20,36 +20,24 @@
                 Email: {{userDetailed.email}}
             </mat-list-item>
         </mat-list>
-        <button 
-                mat-icon-button  
-                (click)="openDialog()"
-                matTooltip="Changer votre mot de passe"
-                > <mat-icon >vpn_key</mat-icon></button>
+        <button mat-icon-button (click)="openDialog()" matTooltip="Changer votre mot de passe">
+            <mat-icon>vpn_key</mat-icon>
+        </button>
 
-        <button mat-icon-button
-        [color]="showContact ? 'primary': ''"
-        *ngIf="userDetailed.contacts != null"
-        (click)="openContacts()"
-        matTooltip="Contact(s)">
+        <button mat-icon-button [color]="showContact ? 'primary': ''" *ngIf="userDetailed.contacts != null"
+            (click)="openContacts()" matTooltip="Contact(s)">
             <mat-icon>people</mat-icon>
         </button>
         <input hidden [matDatepicker]="picker">
-        <mat-datepicker touchUi #picker [dateClass]="dateClass" ></mat-datepicker>
+        <mat-datepicker touchUi #picker [dateClass]="dateClass"></mat-datepicker>
 
-        <button 
-            [color]=""
-            mat-icon-button 
-            (click)="picker.open()"
-            *ngIf="userDetailed.lunches"
-            matTooltip="Repas"
-                >
-                    <mat-icon>calendar_today</mat-icon>
+        <button [color]="" mat-icon-button (click)="picker.open()" *ngIf="userDetailed.lunches" matTooltip="Repas">
+            <mat-icon>calendar_today</mat-icon>
         </button>
         <div *ngIf="showContact">
             <div *ngFor="let contact of userDetailed.contacts">
                 <mat-accordion>
-                    <mat-expansion-panel (opened)="panelState = true"
-                                        (closed)="panelState = false">
+                    <mat-expansion-panel (opened)="panelState = true" (closed)="panelState = false">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
                                 <label><b>{{contact.lastName + " " + contact.firstName}}</b></label>
@@ -57,22 +45,22 @@
                             <mat-panel-description>
                                 <label>{{contact.mobilePhone}}</label>
                             </mat-panel-description>
-                        </mat-expansion-panel-header>  
+                        </mat-expansion-panel-header>
                         <mat-list>
-                            <mat-list-item> 
+                            <mat-list-item>
                                 <b>Adresse</b>: {{contact.adStreet}} n°{{contact.adNumber}}
                                 <label *ngIf="contact.adBox != null"> boite {{contact.adBox}}</label>
-                                , {{contact.adPostalCode}} {{userDetailed.adCity}} 
+                                , {{contact.adPostalCode}} {{userDetailed.adCity}}
                             </mat-list-item>
-                            <mat-divider></mat-divider>   
+                            <mat-divider></mat-divider>
                             <mat-list-item>
-                                <b>Email</b>:  {{contact.email}}
+                                <b>Email</b>: {{contact.email}}
                             </mat-list-item>
-                            <mat-divider></mat-divider>   
+                            <mat-divider></mat-divider>
                             <mat-list-item>
-                               <b>Date de naissance</b>:  {{contact.birthDate}}
+                                <b>Date de naissance</b>: {{contact.birthDate}}
                             </mat-list-item>
-                            <mat-divider></mat-divider> 
+                            <mat-divider></mat-divider>
                             <mat-list-item *ngIf="contact.personalNote">
                                 <b>Note</b>: {{contact.personalNote}}
                             </mat-list-item>
@@ -83,7 +71,3 @@
         </div>
     </mat-card-content>
 </mat-card>
-
-
-
-
