--- a/src/app/Modules/auth/Components/reset-password/reset-password.component.html
+++ b/src/app/Modules/auth/Components/reset-password/reset-password.component.html
@@ -1,45 +1,32 @@
-<H2 mat-dialog-title>Changez votre mot de passe</H2>
-  <mat-dialog-content>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-error *ngIf="error == true">
-          {{this.errorMsg}}
+<H2 mat-dialog-title style="text-align: center;">Changez votre mot de passe</H2>
+<mat-dialog-content>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <mat-error *ngIf="error == true">
+      {{this.errorMsg}}
+    </mat-error>
+
+    <mat-form-field>
+      <input matInput placeholder="Nouveau mot de passe" formControlName="password" required type="password">
+      <mat-error>
+        Le mot de passe est obligatoire.
       </mat-error>
-     
-      <mat-form-field>
-        <input 
-          matInput placeholder="Nouveau mot de passe" 
-          formControlName="password" 
-          required
-          type="password">
-        <mat-error>
-          Le mot de passe est obligatoire.
-        </mat-error>
-      </mat-form-field>
+    </mat-form-field>
 
-      <mat-form-field>
-        <input 
-          matInput placeholder="Confirmez le mot de passe" 
-          formControlName="confirmPassword" 
-          required
-          type="password">
-          <mat-error>
-            La confirmation est obligatoire.
-          </mat-error>
-        </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Confirmez le mot de passe" formControlName="confirmPassword" required
+        type="password">
+      <mat-error>
+        La confirmation est obligatoire.
+      </mat-error>
+    </mat-form-field>
+    <div style="text-align: center;">
+      <button [mat-dialog-close]="false" mat-raised-button color="accent" style="margin: 12px">Annuler</button>
 
-      <button
-        [mat-dialog-close]="false"
-        mat-raised-button
-        color="accent"
-      >Annuler</button>
+      <button mat-raised-button type="submit" color="primary" style="margin: 12px"
+        [disabled]="form.invalid">Valider</button>
+    </div>
 
-      <button 
-      mat-raised-button 
-      type="submit" 
-      color="primary"
-      [disabled]="form.invalid">Valider</button>
-      
 
-    </form>
-  </mat-dialog-content>
-  
+
+  </form>
+</mat-dialog-content>
