--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,10 @@
 .backGroundLightEvent{
-    background-color: white;
+    background-color: #fffdfa;
     color: black;
 }
 .backGroundDarkEvent{
     background-color:#4f4f4f ;
-    color: white;
+    color: #fffdfa;
 }
 
 
@@ -14,4 +14,7 @@
 }
 footer{
     text-align: center;
+}
+body{
+    height: 100%;
 }
