--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-    <div class="bounce-in-top">
+  <div class="bounce-in-top">
     <mat-grid-list cols="4" rowHeight="10vh">
 
       <mat-grid-tile [colspan]="2" [rowspan]="3">
@@ -23,29 +23,29 @@
           </mat-card-header>
           <mat-card-content class="dashboard-card-content" *ngIf="user.statusCode == 2">
             <app-school-event></app-school-event>
-        </mat-card-content>
-        <mat-card-content class="dashboard-card-content" *ngIf="user.statusCode == 1">
-          <app-school-rules></app-school-rules>
-      </mat-card-content>
+          </mat-card-content>
+          <mat-card-content class="dashboard-card-content" *ngIf="user.statusCode == 1">
+            <app-school-rules></app-school-rules>
+          </mat-card-content>
         </mat-card>
       </mat-grid-tile>
-      
-      <mat-grid-tile [colspan]="4" [rowspan]="4">
+
+      <mat-grid-tile [colspan]="4" [rowspan]="5">
         <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
-              
+
             </mat-card-title>
           </mat-card-header>
           <mat-card-content class="dashboard-card-content" *ngIf="user.statusCode == 2">
-              <app-results></app-results>
+            <app-results class="card-content"></app-results>
           </mat-card-content>
           <mat-card-content class="dashboard-card-content" *ngIf="user.statusCode == 1">
             <app-school-event></app-school-event>
-        </mat-card-content>
+          </mat-card-content>
         </mat-card>
       </mat-grid-tile>
 
     </mat-grid-list>
-    </div>
   </div>
+</div>
