--- a/src/app/Components/send-mail/send-mail.component.html
+++ b/src/app/Components/send-mail/send-mail.component.html
@@ -9,11 +9,9 @@
 
         <mat-form-field style="width: 50vw">
             <mat-label>Vers:</mat-label>
-            <input 
-                matInput 
-                formControlName="emailAdress"/>
+            <input matInput formControlName="emailAdress" />
             <mat-error>
-              Au minimum une adresse email est obligatoire.
+                Au minimum une adresse email est obligatoire.
             </mat-error>
         </mat-form-field>
 
@@ -21,9 +19,7 @@
 
         <mat-form-field style="width: 50vw">
             <mat-label>Sujet:</mat-label>
-            <input 
-                matInput 
-                formControlName="emailSubject"/>
+            <input matInput formControlName="emailSubject" />
             <mat-error>
                 Un Sujet est nécessaire.
             </mat-error>
@@ -33,30 +29,21 @@
 
         <mat-form-field class="txtArea">
             <mat-label>Contenu:</mat-label>
-            <textarea
-                matInput
-                style="height: 40vh"
-                formControlName="emailContent"
-                >
+            <textarea matInput style="height: 40vh" formControlName="emailContent">
             </textarea>
             <mat-error>
                 Un contenu est nécessaire.
             </mat-error>
 
         </mat-form-field>
+        <div>
+            <button mat-dialog-close mat-raised-button color="accent" style="margin: 5px">Annuler</button>
 
-    <button
-    mat-dialog-close
-    mat-raised-button
-    color="accent"
-    >Annuler</button>
+            <button mat-raised-button type="submit" color="primary" style="margin: 5px"
+                [disabled]="form.invalid">Envoyer</button>
 
-    <button 
-    mat-raised-button 
-    type="submit" 
-    color="primary"
-    [disabled]="form.invalid">Envoyer</button>
+        </div>
 
-</form>
+    </form>
 
 </mat-dialog-content>
