--- a/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
+++ b/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
@@ -3,35 +3,32 @@
         <mat-card-title>Notes de <b>{{student.lastName}} {{student.firstName}}</b></mat-card-title>
     </mat-card-header>
 
-<div *ngIf="statusCode > 1">
-    <button mat-button color="war" [routerLink]="['../../Etudiants']">Retour</button>
-    <button mat-button color="primary" (click)="openCreateDialog(this.studentId)">Créer</button>
+    <div *ngIf="statusCode > 1">
+        <button mat-button color="war" [routerLink]="['../../Etudiants']">Retour</button>
+        <button mat-button color="primary" (click)="openCreateDialog(this.studentId)">Créer</button>
 
-    
-</div>
 
-<div *ngIf="notes != null">
-    <div *ngFor="let note of notes">
-        <mat-accordion>
-            <mat-expansion-panel (opened)="panelState = true"
-                                    (closed)="panelState = false">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        <label>Classe {{note.className}} </label>
-                    </mat-panel-title>
-                    <mat-panel-description>
-                        <label>Trimestre {{note.trimester}}</label>
-                    </mat-panel-description>
-                </mat-expansion-panel-header>              
-                <p> {{note.description}} </p>
-                <button 
-                        *ngIf="statusCode > 1"
-                    mat-button color="accent" (click)="openDeleteDialog(note.id)">Supprimer</button>
-                <button 
-                    *ngIf="statusCode > 1"
-                    mat-button color="primary" (click)="openUpdateDialog(note)">Mettre à jour</button>     
-            </mat-expansion-panel>
-        </mat-accordion>
     </div>
-</div>
+
+    <div *ngIf="notes != null">
+        <div *ngFor="let note of notes">
+            <mat-accordion>
+                <mat-expansion-panel (opened)="panelState = true" (closed)="panelState = false">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title>
+                            <label>Classe {{note.className}} </label>
+                        </mat-panel-title>
+                        <mat-panel-description>
+                            <label>Trimestre {{note.trimester}}</label>
+                        </mat-panel-description>
+                    </mat-expansion-panel-header>
+                    <p> {{note.description}} </p>
+                    <button *ngIf="statusCode > 1" mat-button color="accent"
+                        (click)="openDeleteDialog(note.id)">Supprimer</button>
+                    <button *ngIf="statusCode > 1" mat-button color="primary" (click)="openUpdateDialog(note)">Mettre à
+                        jour</button>
+                </mat-expansion-panel>
+            </mat-accordion>
+        </div>
+    </div>
 </mat-card>
